# Copyright 2018-2023 the Deno authors. All rights reserved. MIT license.

[package]
name = "deno"
version = "1.35.0"
authors.workspace = true
default-run = "deno"
edition.workspace = true
exclude = ["tests/testdata/npm/registry/*"]
license.workspace = true
repository.workspace = true
description = "Provides the deno executable"

[features]
default = ["tools"]
tools = [
  "deno_doc",
  "deno_emit",
  "deno_lint",
  "deno_core/include_js_files_for_snapshotting",
  "deno_runtime/include_js_files_for_snapshotting",
  "deno_runtime/dont_create_runtime_snapshot",
  "deno_task_shell",
  "dprint-plugin-json",
  "dprint-plugin-markdown",
  "dprint-plugin-typescript",
  "eszip",
  "fancy-regex",
  "lsp-types",
  # "mitata",
  "os_pipe",
  "rustyline",
  "rustyline-derive",
  # "secure_tempfile",
  "serde_repr",
  "shell-escape",
  "text-size",
  "tower-lsp",
  "zstd"
]

[lib]
name = "deno"
path = "lib.rs"

[[bin]]
name = "deno"
path = "main.rs"
doc = false

[[bench]]
name = "deno_bench"
harness = false
path = "./bench/main.rs"

[[bench]]
name = "lsp_bench_standalone"
harness = false
path = "./bench/lsp_bench_standalone.rs"

[build-dependencies]
deno_runtime = { workspace = true, features = ["snapshot_from_snapshot", "include_js_files_for_snapshotting"] }
deno_core = { workspace = true, features = ["include_js_files_for_snapshotting"] }
lazy-regex.workspace = true
serde.workspace = true
serde_json.workspace = true
zstd.workspace = true
glibc_version = "0.1.2"

[target.'cfg(windows)'.build-dependencies]
winapi.workspace = true
winres.workspace = true

[dependencies]
deno_ast = { workspace = true, features = ["bundler", "cjs", "codegen", "dep_graph", "module_specifier", "proposal", "react", "sourcemap", "transforms", "typescript", "view", "visit"] }
deno_core = { workspace = true }
deno_doc = { version = "=0.63.1", optional = true }
deno_emit = { version = "=0.24.0", optional = true }
deno_graph = "=0.49.0"
deno_lint = { version = "=0.49.0", features = ["docs"], optional = true }
deno_lockfile.workspace = true
deno_npm.workspace = true
deno_runtime = { workspace = true }
deno_semver.workspace = true
deno_task_shell = { version = "=0.12.0", optional = true }
eszip = { version = "=0.45.0", optional = true }
napi_sym.workspace = true

async-trait.workspace = true
atty.workspace = true
base32 = "=0.4.0"
base64.workspace = true
bincode = "=1.3.3"
cache_control.workspace = true
chrono = { version = "=0.4.22", default-features = false, features = ["std"] }
clap = { version = "=4.3.3", features = ["string"] }
clap_complete = "=4.3.1"
clap_complete_fig = "=4.3.1"
console_static_text.workspace = true
data-url.workspace = true
dissimilar = "=1.0.4"
dprint-plugin-json = { version = "=0.17.4", optional = true }
dprint-plugin-markdown = { version = "=0.15.3", optional = true }
dprint-plugin-typescript = { version = "=0.85.0", optional = true }
encoding_rs.workspace = true
env_logger = "=0.9.0"
fancy-regex = { version = "=0.10.0", optional = true }
fastwebsockets.workspace = true
flate2.workspace = true
fs3.workspace = true
glob = "0.3.1"
http.workspace = true
hyper.workspace = true
import_map = "=0.15.0"
indexmap.workspace = true
jsonc-parser = { version = "=0.21.1", features = ["serde"] }
lazy-regex.workspace = true
libc.workspace = true
log = { workspace = true, features = ["serde"] }
lsp-types = { workspace = true, optional = true }
monch = "=0.4.2"
notify.workspace = true
once_cell.workspace = true
os_pipe = { workspace = true, optional = true }
percent-encoding.workspace = true
pin-project.workspace = true
rand = { workspace = true, features = ["small_rng"] }
regex.workspace = true
ring.workspace = true
rustyline = { version = "=10.0.0", default-features = false, features = ["custom-bindings"], optional = true }
rustyline-derive = { version = "=0.7.0", optional = true }
serde.workspace = true
serde_repr = { workspace = true, optional = true }
shell-escape = { version = "=0.1.5", optional = true }
tar.workspace = true
tempfile.workspace = true
text-size = { version = "=1.1.0", optional = true }
text_lines = "=0.6.0"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-lsp = { workspace = true, optional = true }
twox-hash = "=1.6.3"
typed-arena = "=2.0.1"
uuid = { workspace = true, features = ["serde"] }
walkdir = "=2.3.2"
zstd = { workspace = true, optional = true }

[target.'cfg(windows)'.dependencies]
fwdansi.workspace = true
junction = "=0.2.0"
winapi = { workspace = true, features = ["knownfolders", "mswsock", "objbase", "shlobj", "tlhelp32", "winbase", "winerror", "winsock2"] }

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
deno_bench_util.workspace = true
dotenv = "=0.15.0"
flaky_test = "=0.1.0"
once_cell.workspace = true
os_pipe.workspace = true
pretty_assertions.workspace = true
test_util.workspace = true
trust-dns-client = "=0.22.0"
trust-dns-server = "=0.22.0"

[package.metadata.winres]
# This section defines the metadata that appears in the deno.exe PE header.
OriginalFilename = "deno.exe"
LegalCopyright = "© Deno contributors & Deno Land Inc. MIT licensed."
ProductName = "Deno"
FileDescription = "Deno: A secure runtime for JavaScript and TypeScript"
